--- a/Lab5/online-store/src/app/components/product-list/product-list.css
+++ b/Lab5/online-store/src/app/components/product-list/product-list.css
@@ -6,3 +6,10 @@
   max-width: 1200px;
   margin: 0 auto;
 }
+
+.empty-message {
+  text-align: center;
+  margin-top: 40px;
+  font-size: 18px;
+  color: #e31010;
+}
