--- a/Lab5/online-store/src/app/components/product-list/product-list.html
+++ b/Lab5/online-store/src/app/components/product-list/product-list.html
@@ -1,7 +1,13 @@
-<div class="products-grid">
+<div class="products-grid" *ngIf="products.length > 0; else emptyState">
   <app-product-card
     *ngFor="let product of products"
     [product]="product"
     (delete)="onDeleteProduct($event)">
   </app-product-card>
 </div>
+
+<ng-template #emptyState>
+  <div class="empty-message">
+    No products in this category !
+  </div>
+</ng-template>
